New script planner with table function support (#340)
* Cleanup

Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>

* Clean up join declarations

Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>

* Cleanup

Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>

* WIP

Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>

* WIP

Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>

* WIP

Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>

* Fix shadowing technique

Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>

* Get script to progress

Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>

* Code cleanup

Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>

* Fix multiples of same param

Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>

* Assure table params are in query

Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>

* Remove old text conversion fnc

Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>

* temp workaround type to debug flink issues

Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>

* Get conference app working a bit more

Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>

* Fix joins

Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>

* Allow naming distinct fields

Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>

* Add move validation

Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>

* Fix graphql argument superset

Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>

* Fix args

Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>

* WIP

Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>

* Cleanup

Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>

* Trim down code

Signed-off-by: Daniel Henneberger <git@danielhenneberger.c